--- a/load.Rmd
+++ b/load.Rmd
@@ -58,10 +58,10 @@ region_path <- file.path(pct_data, region)
 if(!dir.exists(region_path)) dir.create(region_path) # create data directory
 
 # Minimum flow between od pairs, subsetting lines. High means fewer lines
-mflow <- 50
-mflow_short <- 10
-mdist <- 15 # maximum euclidean distance (km) for subsetting lines
-max_all_dist <- 5 # maximum distance (km) below which all lines are selected
+mflow <- 20
+mflow_short <- 1
+mdist <- 20 # maximum euclidean distance (km) for subsetting lines
+max_all_dist <- 7 # maximum distance (km) below which all lines are selected
 min_zones <- 60 # minumum number of zones in study area before buffer used
 buff_dist <- 5 # buffer (km) used to select additional zones (often zero = ok)
 buff_geo_dist <- 250 # buffer (m) for removing line start and end points for network
@@ -600,6 +600,7 @@ The value of each segment in the network corresponds to the total number of cycl
 # Scenario names - may need updating
 # nrow(l) == nrow(rf)
 
+rft <- rf
 # Stop rnet lines going to centroid (optional)
 # rft <- toptail(rf, toptail_dist = buff_geo_dist) 
 if(length(rft) == length(rf)){
@@ -614,7 +615,7 @@ rft$base_olc <- l$base_olc
 # see https://github.com/mbloch/mapshaper/wiki/
 rft <- ms_simplify(rft, keep = 0.1)
 rnet <- overline(rft, "base_olc")
-object.size(rnet)
+# object.size(rnet)
 # test the resulting plot
 plot(rnet, lwd = rnet$base_olc / mean(rnet$base_olc))
 for(i in scens){
